--- a/orc_site/templates/gallery/gallery.html
+++ b/orc_site/templates/gallery/gallery.html
@@ -1,6 +1,6 @@
 {% extends "page.html" %}
 
-{% if is_production %}
+{% if production %}
     {% block etracker_et_pagename %}%2FGallery%3Agallery%2F{% endblock etracker_et_pagename %}
     {% block etracker_et_pagename_nojs %}%2FGallery%3Agallery%2F{% endblock etracker_et_pagename_nojs %}
     {% block etracker_et_areas %}%2Fgallery{% endblock etracker_et_areas %}
