--- a/binderhub/templates/loading.html
+++ b/binderhub/templates/loading.html
@@ -2,11 +2,9 @@
 
 {% block head %}
 <meta id="base-url" data-url="{{base_url}}">
-{{ super() }}
 <script src="{{static_url("dist/bundle.js")}}"></script>
-<link href="{{static_url("dist/styles.css")}}" rel="stylesheet"/>
+{{ super() }}
 <link rel="stylesheet" href="{{static_url("loading.css")}}">
-<link href="/static/notebooks.css" rel="stylesheet" />
 <style>
 div#log-container {
     width: 100%;
@@ -35,9 +33,7 @@ div#log-container {
 </div>
 
 {% block preview %}
-{# we can only produce an nbviewer URL for github right now #}
-{% set prefix, repo_ref = provider_spec.split('/', 1) %}
-{% if prefix == "gh" %}
+{% if nbviewer_url %}
 <div class="preview container" style="width: 100%;">
 <p class="preview-text text-center">
 Here's a non-interactive preview on
@@ -45,15 +41,13 @@ Here's a non-interactive preview on
 while we start a server for you.
 Your binder will open automatically when it is ready.
 </p>
-{% set repo, ref = repo_ref.rsplit('/', 1) %}
 <div id="nbviewer-preview">
-  <iframe
-    src="https://nbviewer.jupyter.org/github/{{repo}}/{{'blob' if filepath else 'tree'}}/{{ref}}/{% if filepath %}{{ filepath }}{% endif %}"
-  ></iframe>
+  <iframe src="{{ nbviewer_url }}"></iframe>
 </div>
 </div>
 {% endif %}
 {% endblock preview %}
+
 <div class="row form-group"></div>
 <div class="row form-group"></div>
 {% endblock main %}
