--- a/jupyterhub/docker/k8s_hub/templates/page.html
+++ b/jupyterhub/docker/k8s_hub/templates/page.html
@@ -30,14 +30,17 @@
     <title>{% block title %}JupyterHub{% endblock %}</title>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="JupyterHub - GESIS Notebooks (beta{% if is_staging %}-test{% endif %})">
+    <meta name="description" content="JupyterHub - GESIS Notebooks ({{version}})">
 
     {% block stylesheet %}
     <link href="/static/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="{{ static_url("css/style.min.css") }}" type="text/css"/>
-    <link href="/static/notebooks.css" rel="stylesheet" />
     {% endblock %}
+    <link href="/static/notebooks.css" rel="stylesheet" />
     <link id="favicon" rel="shortcut icon" type="image/png" href="/static/images/logo/logo.png" />
+
+    {% block extra_css %}
+    {% endblock extra_css %}
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -46,9 +49,11 @@
       <script src="/static/vendor/respond.min.js"></script>
     <![endif]-->
 
+    {% block scripts %}
     <script src="{{static_url("components/requirejs/require.js") }}" type="text/javascript" charset="utf-8"></script>
     <script src="{{static_url("components/jquery/dist/jquery.min.js") }}" type="text/javascript" charset="utf-8"></script>
     <script src="{{static_url("components/bootstrap/dist/js/bootstrap.min.js") }}" type="text/javascript" charset="utf-8"></script>
+    {% endblock %}
     <script>
       require.config({
           {% if version_hash %}
@@ -91,7 +96,7 @@
     </script>
 
     {% block etracker %}
-    {% if is_production %}
+    {% if production %}
     {% set etracker_prefix = "NOTEBOOKS" %}
     <!-- Copyright (c) 2000-2016 etracker GmbH. All rights reserved. -->
     <!-- This material may not be reproduced, displayed, modified or distributed -->
@@ -129,108 +134,16 @@
   </div>
 </noscript>
 {% block body %}
-{% block header %}
-<header style="background-color: #333;">
-  <div role="navigation" class="navbar navbar-default navbar-static-top">
-      <div style="background-color: #333;">
-      <div id="header-container" class="container">
-          <div class="navbar-header">
-              <a class="navbar-brand" href="https://www.gesis.org/en/home/">
-                  <img src="/static/images/gs_home_logo_en.svg" class="hidden-sm hidden-xs">
-                  <img src="/static/images/gs_small_logo_de.svg" class="visible-sm visible-xs">
-              </a>
-              <div class="navbar-header pull-right visible-xs hidden-sm hidden-md hidden-lg">
-                  <ul class="nav nav-pills pull-left ">
-                      <li>
-                          <a href="mailto:notebooks@gesis.org" style="display: inline; padding: 0;">
-                              <button class="navbar-toggle navbar-link">
-                                  <b aria-hidden="true" class="visible-xs glyphicon glyphicon-envelope"></b>
-                              </button>
-                          </a>
-                      </li>
-                      <li>
-                          <a href="/about/" style="display: inline; padding: 0;">
-                              <button class="navbar-toggle navbar-link">
-                                  <b aria-hidden="true" class="visible-xs glyphicon glyphicon-question-sign"></b>
-                              </button>
-                          </a>
-                      </li>
-                  </ul>
-              </div>
-          </div>
-          <div class="navbar-header pull-right hidden-xs">
-              <ul class="nav navbar-nav pull-left">
-                  <li>
-                      <a href="mailto:notebooks@gesis.org">
-                          <span class="top-menu-item hidden-xs">
-                              <span aria-hidden="true" class="glyphicon glyphicon-envelope"></span>
-                              Contact
-                          </span>
-                      </a>
-                  </li>
-              </ul>
-              <ul class="nav navbar-nav pull-left">
-                  <li>
-                      <a href="/about/">
-                          <span class="top-menu-item hidden-xs">
-                              <span aria-hidden="true" class="glyphicon glyphicon-question-sign"></span>
-                              About
-                          </span>
-                      </a>
-                  </li>
-              </ul>
-          </div>
-          <div id="header_banner">
-              <a  href="/">
-                  <img src="/static/images/gs_ms_banner_default_notebooks{% if is_staging %}_test{% endif %}_beta.png" class="img-responsive"
-                       alt="To GESIS Notebooks Homepage" title="To GESIS Notebooks Homepage">
-              </a>
-          </div>
-      </div>
-      </div>
-  </div>
-</header>
-{% endblock header %}
 
-<div id="main-container" class="container">
-    <div class="row">
-        {% block nav_bar %}
-        <nav class="navbar navbar-default">
-          <div class="container-fluid" style="color: #58748f; background-color: #cdd5dd; border: none; border-radius: 0; padding: 0;">
-            <div class="navbar-header">
-              <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-              </button>
-            </div>
-            <div id="navbar" class="navbar-collapse collapse" style="border-color: #e7e7e7;">
-{#                  <ul class="nav navbar-nav" style="float:none; margin: 0 auto; display: table; table-layout: fixed;">#}
-              <ul class="nav navbar-nav">
-                <li><a href="/">Home</a></li>
-                {#<li><a href="{{base_url}}token">Token</a></li>
-                {% if user.admin %}
-                <li><a href="{{base_url}}admin">Admin</a></li>
-                {% endif %}#}
-                <li class="dropdown">
-                  <a href="#" id="navbar-active-a" class="dropdown-toggle gs_active_sub" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Your Server <span class="caret"></span></a>
-                  <ul class="dropdown-menu">
-                    <li><a href="{{base_url}}home">Home</a></li>
-                    <li><a href="{{base_url}}token">Token</a></li>
-                    {% if user.admin %}<li><a href="{{base_url}}admin_orc">Admin</a></li>{% endif %}
-                    <li><a href="{% if user %}{{logout_url}}{% else %}{{login_url}}{% endif %}">{% if user %}Logout{% else %}Login{% endif %}</a></li>
-                  </ul>
-                </li>
-                <li><a href="/binder/">Binder</a></li>
-                <li><a href="/gallery/">Gallery</a></li>
-              </ul>
-            </div>
-          </div>
-        </nav>
-        {% endblock nav_bar %}
-    </div>
-</div>
+{% block gesis_header %}
+{% include "gesis/header.html" %}
+{% endblock gesis_header %}
+
+{% block nav_bar %}
+{#{% if show_jhub_menu %}#}
+{% include "gesis/nav.html" %}
+{#{% endif %}#}
+{% endblock nav_bar %}
 
 {% block announcement %}
 {% if announcement %}
@@ -254,43 +167,13 @@
     <div class="row form-group"></div>
     <div class="row form-group"></div>
   </div>
-
-    <footer class="footer">
-      <div class="container">
-          <span class="footer-span">
-              <img src="/static/images/leibniz_logo_en_white.svg" width="78" height="54" alt="Leibniz Logo"/>
-          </span>
-          <span class="footer-span" style="padding-right: 0;">
-              <a class="footer-link" href="https://www.gesis.org/en/institute/imprint/">Imprint</a> |
-          </span>
-          <span class="footer-span" style="padding-right: 0;">
-              <a class="footer-link" href="https://www.gesis.org/en/institute/data-protection/">Data protection</a> |
-          </span>
-          <span class="footer-span">
-              <a class="footer-link" href="https://notebooks{% if is_staging %}-test{% endif %}.gesis.org/terms_of_use/">Terms of Use</a>
-          </span>
-          <span class="footer-span">
-              &copy; GESIS
-          </span>
-      </div>
-    </footer>
+  {% include "gesis/footer.html" %}
 {% endblock footer %}
 {% endblock body %}
 
-    <script>
-        $("div#navbar>ul>li>a").hover(
-            function() {
-                // in
-                $("div#navbar>ul>li>a").removeClass("gs_active_sub");
-                $(this).addClass( "gs_active_sub" );
-                },
-            function() {
-                // out
-                $(this).removeClass( "gs_active_sub" );
-                $("#navbar-active-a").addClass( "gs_active_sub" );
-                }
-            );
-    </script>
+{#{% if show_jhub_menu %}#}
+<script src="/static/gesis_nav.js"></script>
+{#{% endif %}#}
 
 {% block script %}
 {% endblock %}
