--- a/orc_site/templates/about.html
+++ b/orc_site/templates/about.html
@@ -12,14 +12,10 @@
 {#<div class="row form-group"></div>#}
 <div class="row form-group" style="padding-left: 30px; padding-right: 30px;">
     {#https://www.gesis.org/en/research/external-funding-projects/overview-external-funding-projects/a-virtual-research-infrastructure-for-large-scale-qualitative-data/#}
-    <h3>iLCM - A virtual research infrastructure for large-scale qualitative data</h3>
-    The iLCM project aims to develop an integrated research environment for the analysis of structured as well as
-    unstructured data. The research environment extends the existing Leipzig Corpus Miner framework into an
-    "Open Research Computing" (ORC) "Software as a Service" platform. This ORC platform will enable researchers to
-    implement highly individualized research designs and support researchers in meeting highly individualized
-    project-specific requirements. The ORC platform’s design will be based on notebooks. Notebooks are
-    computational executable scripts along their verbal description. The role of GESIS in this project will be
-    the development of a central service for executing, publishing and archiving of notebooks.
+    <h3>Open Research Computing (ORC) Project</h3>
+
+    <a href="https://www.gesis.org/en/research/external-funding-projects/overview-external-funding-projects/a-virtual-research-infrastructure-for-large-scale-qualitative-data/" target="_blank">Project details</a>
+{#    http://gepris.dfg.de/gepris/projekt/324867496?language=en#}
 </div>
 
 <div class="row form-group" style="padding-left: 30px; padding-right: 30px;">
