--- a/binderhub/templates/page.html
+++ b/binderhub/templates/page.html
@@ -12,6 +12,7 @@
   <link href="{{static_url("dist/styles.css")}}" rel="stylesheet"/>
   <link href="/static/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
   {% endblock head %}
+  <script src="/static/vendor/jquery-3.2.1.min.js"></script>
   <link href="/static/notebooks.css" rel="stylesheet" />
   <link id="favicon" rel="shortcut icon" type="image/png" href="/static/images/logo/logo.png" />
 
