--- a/orc_site/templates/gesis/header.html
+++ b/orc_site/templates/gesis/header.html
@@ -1,6 +1,6 @@
-<header style="background-color: #333;">
+<header>
     <div role="navigation" class="navbar navbar-default navbar-static-top">
-        <div style="background-color: #333;">
+        <div>
             <div id="header-container" class="container">
                 <div class="navbar-header">
                     <a class="navbar-brand" href="{{ gesis_url }}">
