--- a/orc_site/static/notebooks.css
+++ b/orc_site/static/notebooks.css
@@ -245,6 +245,8 @@ footer .container {
 
 #header_banner > a > img {
     max-width: 100%;
+    height: 125px;
+    width: 960px;
 }
 
 #header > h3 {
