update etracker tags

--- a/orc_site/templates/shibboleth_login.html
+++ b/orc_site/templates/shibboleth_login.html
@@ -6,8 +6,8 @@
 {% endblock head %}
 
 {% if production %}
-    {% block etracker_et_pagename %}%2FLogin%3Alogin%2F{% endblock etracker_et_pagename %}
-    {% block etracker_et_pagename_nojs %}%2FLogin%3Alogin%2F{% endblock etracker_et_pagename_nojs %}
+    {% block etracker_et_pagename %}%2FJupyterHub%3Ajupyter%2F{% endblock etracker_et_pagename %}
+    {% block etracker_et_pagename_nojs %}%2FJupyterHub%3Ajupyter%2F{% endblock etracker_et_pagename_nojs %}
     {% block etracker_et_areas %}%2Fjupyterhub{% endblock etracker_et_areas %}
     {% block etracker_et_areas_no_js %}%2Fjupyterhub{% endblock etracker_et_areas_no_js %}
 {% endif %}
