--- a/jupyterhub/docker/k8s_hub/templates/page.html
+++ b/jupyterhub/docker/k8s_hub/templates/page.html
@@ -103,7 +103,7 @@
     <!-- without the express prior written permission of the copyright holder. -->
     <!-- etracker tracklet 4.0 -->
     <script type="text/javascript">
-      var et_pagename = "{{ etracker_prefix }}%2FJupyter%3Ajupyter%2F";
+      var et_pagename = "{{ etracker_prefix }}%2FJupyterHub%3Ajupyter%2F";
       var et_areas = "{{ etracker_prefix }}%2Fjupyterhub";
     </script>
     <script id="_etLoader" type="text/javascript" charset="UTF-8" data-secure-code="qPKGYV"
@@ -111,7 +111,7 @@
     <noscript>
       <link rel="stylesheet" media="all"
             href="//www.etracker.de/cnt_css.php?et=qPKGYV&amp;v=4.0&amp;java=n&amp;et_easy=0&amp;
-                    et_pagename={{ etracker_prefix }}%2FJupyter%3Ajupyter%2F&amp;
+                    et_pagename={{ etracker_prefix }}%2FJupyterHub%3Ajupyter%2F&amp;
                     et_areas={{ etracker_prefix }}%2Fjupyterhub&amp;
                     et_ilevel=0&amp;et_target=,0,0,0&amp;et_lpage=0&amp;et_trig=0&amp;et_se=0&amp;et_cust=0&amp;
                     et_basket=&amp;et_url=&amp;et_tag=&amp;et_sub=&amp;et_organisation=&amp;et_demographic="/>
