--- a/binderhub/templates/about.html
+++ b/binderhub/templates/about.html
@@ -11,8 +11,16 @@
         <div id="explanation">
           <p>This website is powered by <a href="https://github.com/jupyterhub/binderhub">BinderHub</a> v{{ binder_version }}.
           </p>
+          {% if message %}
           <p>
             {{ message | safe }}
+          </p>
+          {% endif %}
+          <p>
+              <button id="up-to-date" type="button" class="btn btn-default"
+                      data-container="body" data-toggle="popover" data-placement="right">
+                  Up to date?
+              </button>
           </p>
         </div>
       </div>
@@ -24,3 +32,55 @@
 
 {% block footer %}
 {% endblock footer %}
+
+{% block extra_js %}
+<script src="/static/vendor/bootstrap/js/bootstrap.min.js"></script>
+<script type="text/javascript">
+    function compare_verions() {
+        var versions_url = "/binder/versions";
+        var versions = "";
+        var mybinder_versions_url = "https://mybinder.org/versions";
+        var mybinder_versions = "";
+        $.get(
+            versions_url,
+            function( data ) {
+                versions = data;
+                console.log('###', versions);
+                $.get(
+                    mybinder_versions_url,
+                    function( data ) {
+                        mybinder_versions = data;
+                        console.log('###', mybinder_versions);
+                        console.log(1, versions !== "" && mybinder_versions !== "");
+                        console.log(2, versions["builder"] === mybinder_versions["builder"] && versions["binderhub"] === mybinder_versions["binderhub"]);
+                        if (versions !== "" && mybinder_versions !== "") {
+                            mybinder_versions = mybinder_versions["binderhub"] + " with " + mybinder_versions["builder"];
+                            versions = versions["binderhub"] + " with " + versions["builder"];
+                            if (versions === mybinder_versions) {
+                                $("#up-to-date").data('bs.popover').options.title = "Yes";
+                                $("#up-to-date").data('bs.popover').options.content = "mybinder.org: " + mybinder_versions + "<br />GESIS binder: " + versions;
+
+                            } else {
+                                $("#up-to-date").data('bs.popover').options.title = "No";
+                                $("#up-to-date").data('bs.popover').options.content = "mybinder.org: " + mybinder_versions + "<br />GESIS binder: " + versions;
+                            }
+                        }
+
+                        },
+                    "json"
+                );
+                },
+            "json"
+        );
+    }
+
+    $( document ).ready(function() {
+        $("#up-to-date").popover({'trigger': 'hover', 'html': true});
+        compare_verions();
+    });
+
+    $("#up-to-date").on('show.bs.popover', function () {
+        compare_verions();
+    });
+</script>
+{% endblock extra_js %}
