remove gallery and all related parts from orc-site, run orc-site behind gunicorn with multiple workers in docker, some updates for orc-site app

--- a/orc_site/static/notebooks.css
+++ b/orc_site/static/notebooks.css
@@ -26,9 +26,9 @@
 	}
 
 body {
-	background-color: #333;
-    font-family: "Droid Sans", Arial, Verdana, Helvetica, sans-serif;
-	}
+    background-color: #333;
+    font-family: "Droid Sans", Arial, Verdana, Helvetica, sans-serif !important;
+    }
 
 #header-container{
 	background-color: #fff;
