--- a/orc_site/templates/gesis/header.html
+++ b/orc_site/templates/gesis/header.html
@@ -1,11 +1,11 @@
-<header>
+<header style="background-color: #333;">
     <div role="navigation" class="navbar navbar-default navbar-static-top">
-        <div>
+        <div style="background-color: #333;">
             <div id="header-container" class="container">
                 <div class="navbar-header">
                     <a class="navbar-brand" href="{{ gesis_url }}">
-                        <img src="/static/images/gs_home_logo_en.svg" class="hidden-sm hidden-xs">
-                        <img src="/static/images/gs_small_logo_de.svg" class="visible-sm visible-xs">
+                        <img src="{{ url_for('static', filename='images/gs_home_logo_en.svg') }}" class="hidden-sm hidden-xs">
+                        <img src="{{ url_for('static', filename='images/gs_small_logo_de.svg') }}" class="visible-sm visible-xs">
                     </a>
                     <div class="navbar-header pull-right visible-xs hidden-sm hidden-md hidden-lg">
                         <ul class="nav nav-pills pull-left ">
@@ -35,7 +35,7 @@
                 {#<div id="header_banner" class="col-xs-12 hidden-xs hidden-sm">#}
                 <div id="header_banner">
                     <a href="{{ home_url }}">
-                        <img src="/static/images/gs_ms_banner_default_notebooks{% if staging %}_test{% endif %}_beta.png"
+                        <img src="{{ url_for('static', filename='images/gs_ms_banner_default_notebooks_beta.png') }}"
                              class="img-responsive" alt="To GESIS Notebooks Homepage" title="To GESIS Notebooks Homepage">
                     </a>
                 </div>
