--- a/orc_site/templates/home.html
+++ b/orc_site/templates/home.html
@@ -7,7 +7,7 @@
 {#    <div class="col-lg-1 col-md-1"></div>#}
 {#    <div class="col-lg-10 col-lg-offset-1 text-center">#}
     <div class="col-lg-6 col-md-6 col-sm-5 hidden-xs">
-        <img alt="GESIS Notebooks" src="/static/images/notebook.png" class="img-responsive center-block">
+        <img alt="GESIS Notebooks" src="{{ url_for('static', filename='images/notebook.png') }}" class="img-responsive center-block">
     </div>
     <div class="col-lg-6 col-md-6 col-sm-7 col-xs-12">
         <h3>
@@ -52,7 +52,7 @@
 {% endblock main %}
 
 {% block extra_js %}
-<script src="/static/vendor/typed.js-2.0.6/lib/typed.min.js"></script>
+<script src="{{ url_for('static', filename='vendor/typed.js-2.0.6/lib/typed.min.js') }}"></script>
 <script>
     var typed = new Typed('#typed',
         {
