add api link into about page

--- a/orc_site/templates/about.html
+++ b/orc_site/templates/about.html
@@ -53,5 +53,8 @@
     <p>
         <a href="https://github.com/gesiscss/orc">GitHub Repository</a>
     </p>
+    <p>
+        <a href="/gallery/api/v1.0/">API</a> for launch events on GESIS binder
+    </p>
 </div>
 {% endblock main %}
