--- a/gesishub/docker/k8s_hub/templates/gesis/header.html
+++ b/gesishub/docker/k8s_hub/templates/gesis/header.html
@@ -1,6 +1,6 @@
-<header>
+<header style="background-color: #333;">
     <div role="navigation" class="navbar navbar-default navbar-static-top">
-        <div>
+        <div style="background-color: #333;">
             <div id="header-container" class="container">
                 <div class="navbar-header">
                     <a class="navbar-brand" href="{{ gesis_url }}">
@@ -35,7 +35,7 @@
                 {#<div id="header_banner" class="col-xs-12 hidden-xs hidden-sm">#}
                 <div id="header_banner">
                     <a href="{{ home_url }}">
-                        <img src="/static/images/gs_ms_banner_default_notebooks{% if staging %}_test{% endif %}_beta.png"
+                        <img src="/static/images/gs_ms_banner_default_notebooks_beta.png"
                              class="img-responsive" alt="To GESIS Notebooks Homepage" title="To GESIS Notebooks Homepage">
                     </a>
                 </div>
