deploy binderhub-0.2.0-5ca42ec with jupyter/repo2docker:4b0e8381

--- a/gesisbinder/templates/page.html
+++ b/gesisbinder/templates/page.html
@@ -55,6 +55,12 @@
 <body>
     {% block body %}
 
+{#    {% if banner %}#}
+{#    <div id="banner-container">#}
+{#      {{ banner | safe }}#}
+{#    </div>#}
+{#    {% endif %}#}
+
     {% block gesis_header %}
     {% include "gesis/header.html" %}
     {% endblock gesis_header %}
