--- a/gesisbinder/templates/loading.html
+++ b/gesisbinder/templates/loading.html
@@ -5,7 +5,7 @@
 <meta id="badge-base-url" data-url="{{badge_base_url}}">
 <script src="{{static_url("dist/bundle.js")}}"></script>
 {{ super() }}
-<link rel="stylesheet" href="{{static_url("loading.css")}}">
+<link href="{{static_url("loading.css")}}" rel="stylesheet">
 <style>
 div#log-container {
     width: 100%;
