--- a/orc_site/templates/home.html
+++ b/orc_site/templates/home.html
@@ -13,7 +13,9 @@
         <h3>
             <span id="typed"></span>
         </h3>
-        <a href="{{gesishub_url}}" class="btn btn-lg btn-warning orc-button" role="button">Hub</a>
+        {% if not logged_in %}
+        <a href="{{gesishub_url}}" class="btn btn-lg btn-warning orc-button" role="button">Login</a>
+        {% endif %}
     </div>
 </div>
 
