jhub admin template update

--- a/gesishub/templates/admin.html
+++ b/gesishub/templates/admin.html
@@ -2,7 +2,7 @@
 
 {% block thead %}
 {{ th("User (%i)" % users|length, 'name') }}
-{{ th("Displayname", 'displayname') }}
+{{ th("Name", 'displayname') }}
 {{ th("Admin", 'admin') }}
 {{ th("Last Activity", 'last_activity') }}
 {{ th("Created", 'created') }}
