--- a/gesisbinder/templates/page.html
+++ b/gesisbinder/templates/page.html
@@ -34,16 +34,16 @@
   <!-- without the express prior written permission of the copyright holder. -->
   <!-- etracker tracklet 4.0 -->
   <script type="text/javascript">
-      var et_pagename = "{{ etracker_prefix }}%2FBinderHub%3Abinder%2F";
-      var et_areas = "{{ etracker_prefix }}%2Fbinderhub";
+      var et_pagename = "{{ etracker_prefix }}%2FGESISBinder%3Abinder%2F";
+      var et_areas = "{{ etracker_prefix }}%2FGESISBinder";
   </script>
   <script id="_etLoader" type="text/javascript" charset="UTF-8" data-secure-code="qPKGYV"
           src="//static.etracker.com/code/e.js"></script>
   <noscript>
       <link rel="stylesheet" media="all"
             href="//www.etracker.de/cnt_css.php?et=qPKGYV&amp;v=4.0&amp;java=n&amp;et_easy=0&amp;
-                  et_pagename={{ etracker_prefix }}%2FBinderHub%3Abinder%2F&amp;
-                  et_areas={{ etracker_prefix }}%2Fbinderhub&amp;
+                  et_pagename={{ etracker_prefix }}%2FGESISBinder%3Abinder%2F&amp;
+                  et_areas={{ etracker_prefix }}%2FGESISBinder&amp;
                   et_ilevel=0&amp;et_target=,0,0,0&amp;et_lpage=0&amp;et_trig=0&amp;et_se=0&amp;et_cust=0&amp;
                   et_basket=&amp;et_url=&amp;et_tag=&amp;et_sub=&amp;et_organisation=&amp;et_demographic="/>
   </noscript>
