--- a/gesisbinder/templates/page.html
+++ b/gesisbinder/templates/page.html
@@ -16,6 +16,16 @@
   <link href="/static/notebooks.css" rel="stylesheet" />
   <link id="favicon" rel="shortcut icon" type="image/png" href="/static/images/logo/logo.png" />
 
+  <!-- Social media previews -->
+  <meta property="og:title" content="The Binder Project">
+  <meta property="og:description" content="Reproducible, sharable, interactive computing environments.">
+  <meta property="og:image" content="https://mybinder.org/static/images/logo_social.png">
+  <meta property="og:image:width" content="1334">
+  <meta property="og:image:height" content="700">
+  <meta property="og:image:alt" content="The Binder Project Logo" />
+
+  <meta name="twitter:card" content="summary_large_image">
+
   {% block extra_css %}
   {% endblock extra_css %}
 
