--- a/orc_site/templates/team.html
+++ b/orc_site/templates/team.html
@@ -51,7 +51,7 @@
                     <p class="description">
                         Dhurim Sylejmani is a MSc student at the Web Science program at the University of
                         Koblenz-Landau (Germany) and a student research assistant at GESIS - Leibniz-Institute for the
-                        Social Sciences. Currently working on <a href="https://notebooks.gesis.org/gallery/">Gesis
+                        Social Sciences. Currently working on <a href="https://notebooks.gesis.org/gallery/">GESIS
                         Gallery</a>.
                         He is constantly exploring new concepts, applications and technologies that can add to his
                         knowledge.
